# agent-system-companies

./: .gitignore  README.md  companies.py  companies_analysis.py  main.py  pruebaapi.py  pyproject.toml  requirements.txt  server.py  test_api.py
acquisition/acquisition/alphavantage/: alphavantage.py  cryptocurrencis.py  forex.py  fundamental_data.py  technical_indicators.py  timeseries.py
acquisition/acquisition/errors/: check_alphavantage.py
acquisition/acquisition/readers/: alphavantage_reader.py  extended_csv_reader.py  reader.py  requests_reader.py
exceptions/: acquisition_exceptions.py  data_preparation_exceptions.py
format_tool/: format_balance_sheet.py  format_fundamental.py  format_overview.py
tools/: filter_date.py  mongodb.py  pandas_tools.py
